@@ -1,3 +1,5 @@
+4/17/12 add test to GraphNode, move view-specific assertion from Graph to GraphNode
+4/17/12 repackage classes used in >1 tab
 4/17/12 rename some classes that are specific to slope-intercept format
 4/17/12 i18n suggestion from Sandor: add a space between x and y coordinates in point tool, because ',' is the decimal separator for many locales
 4/16/12 use Paint instead of Color in picker interfaces, to support possible use of gradients
